SaranjeetKaur published a site update

--- a/rdevguide.tex
+++ b/rdevguide.tex
@@ -117,7 +117,7 @@
 
 \title{R Development Guide}
 \author{R Contribution Working Group}
-\date{2023-08-03}
+\date{2023-08-05}
 
 \begin{document}
 \maketitle
@@ -813,13 +813,13 @@ If you like to see how bugs are reported on Bugzilla, here are some examples:
 \begin{enumerate}
 \def\labelenumi{\arabic{enumi}.}
 \item
-  A \href{https://bugs.r-project.org/bugzilla/show_bug.cgi?id=17767}{bug report} with a reproducible example, a patch, and a review.
+  \href{https://bugs.r-project.org/bugzilla/show_bug.cgi?id=17767}{Bug 17767 - Warning about incomplete argument within nlme}: A bug report with a reproducible example, a patch, and a review.
 \item
-  A \href{https://stat.ethz.ch/pipermail/r-devel/2019-May/077855.html}{bug report} submitted by Kara Woo which was promptly fixed via the R-devel mailing list. (More information about the R-devel mailing list can be found \href{https://stat.ethz.ch/mailman/listinfo/r-devel}{here}).
+  \href{https://stat.ethz.ch/pipermail/r-devel/2019-May/077855.html}{Possible bug when finding shared libraries during staged installation}: A bug report submitted by Kara Woo which was promptly fixed via the R-devel mailing list. (More information about the R-devel mailing list can be found \href{https://stat.ethz.ch/mailman/listinfo/r-devel}{here}).
 \item
-  A substring \href{https://stat.ethz.ch/pipermail/r-devel/2019-February/077393.html}{bug reported} by Toby Dylan Hocking and fixed by Tomas Kalibera, Feb 2019 via the R-devel mailing list.
+  \href{https://stat.ethz.ch/pipermail/r-devel/2019-February/077393.html}{Bug: time complexity of substring is quadratic as string size and number of substrings increases}: A substring reported by Toby Dylan Hocking and fixed by Tomas Kalibera, Feb 2019 via the R-devel mailing list.
 \item
-  A gregexpr \href{https://stat.ethz.ch/pipermail/r-devel/2019-February/077315.html}{bug report and patch} submitted by Toby Dylan Hocking and merged by Tomas Kalibera, Feb 2019 via the R-devel mailing list.
+  \href{https://stat.ethz.ch/pipermail/r-devel/2019-February/077315.html}{patch for gregexpr(perl=TRUE)}: A gregexpr bug report and patch submitted by Toby Dylan Hocking and merged by Tomas Kalibera, Feb 2019 via the R-devel mailing list.
 \end{enumerate}
 
 \hypertarget{see-also-1}{%
