SaranjeetKaur published a site update

--- a/rdevguide.tex
+++ b/rdevguide.tex
@@ -891,7 +891,7 @@ These helpful tasks allow the Core developers and/ or maintainers to classify a 
 \hypertarget{example-of-a-bug-review-submitted-on-bugzilla}{%
 \section{Example of a bug review submitted on Bugzilla}\label{example-of-a-bug-review-submitted-on-bugzilla}}
 
-If you would like to see how bugs are reviewed on Bugzilla, \href{https://bugs.r-project.org/bugzilla/show_bug.cgi?id=16542}{here} is an example where an old bug report is being reviewed. It is tested to see if it was still an issue and a few ways are proposed to resolve the issue.
+If you would like to see how bugs are reviewed on Bugzilla, the \href{https://bugs.r-project.org/bugzilla/show_bug.cgi?id=16542}{Bug 16542 - nlme:::summary.lmList with unequal outputs per group} is an example where an old bug report is being reviewed. It is tested to see if it was still an issue and a few ways are proposed to resolve the issue.
 
 \textbf{Note}:
 
