--- a/08-message-translations.Rmd
+++ b/08-message-translations.Rmd
@@ -209,7 +209,7 @@ for non-English speakers and helps to grow the R community. See the blog post on
 how [R can use your help: Translating R
 messages](https://blog.r-project.org/2022/07/25/r-can-use-your-help-translating-r-messages).
 
-To get started with new translation, please follow the steps below:
+To get started contributing to translations, please follow the steps below:
 
 Step 1: Register an Account at Weblate
 
