--- a/08-message-translations.Rmd
+++ b/08-message-translations.Rmd
@@ -259,9 +259,13 @@ Some Tips to follow:
 
 - Be consistent: Use the same words and phrases throughout the translation to make it consistent and avoid confusion.
 
-- Use concise language: This will ensure the translated messages are short and easy to read
-
 - Check for technical issues: After finishing the translation, check if you have any alerts or warning in the weblate string status, e.g. double instead of single space.
+
+# - Use Automatic Suggestions (machine translation) as a starting point (this may need more than a bullet point to explain how to do this)
+
+- Look at how other languages have translated the string. Even if you are not fluent in another language it can give you an idea of how other translators have handled it, especially which parts are left verbatim.
+
+- See Glossary feature within Weblate: https://translate.rx.studio/projects/r-project/glossary/
 
 
 Related links:
