--- a/rdevguide.tex
+++ b/rdevguide.tex
@@ -117,7 +117,7 @@
 
 \title{R Development Guide}
 \author{R Contribution Working Group}
-\date{2023-08-31}
+\date{2023-09-01}
 
 \begin{document}
 \maketitle
@@ -1541,81 +1541,110 @@ There is a \texttt{\#core-documentation} channel on the \href{https://r-contribu
 \hypertarget{message-translations}{%
 \chapter{Message Translations}\label{message-translations}}
 
-This chapter covers internationalization in R, i.e., the display of messages in languages other than English. All
-output in R (such as messages emitted by \texttt{stop()}, \texttt{warning()}, or \texttt{message()}) is eligible for translation, as
-are menu labels in the GUI. Depending on the version of R that you are using, some of the languages might already
-be available while others may need work. R leverages the \href{https://www.gnu.org/software/gettext/}{\texttt{gettext}} program
-to handle the conversion from English to arbitrary target languages.
+This chapter covers internationalization in R, i.e., the display of
+messages in languages other than English. All output in R (such as
+messages emitted by \texttt{stop()}, \texttt{warning()}, or \texttt{message()}) is eligible
+for translation, as are menu labels in the GUI. Depending on the version
+of R that you are using, some of the languages might already be
+available while others may need work. R leverages the
+\href{https://www.gnu.org/software/gettext/}{\texttt{gettext}} program to handle the
+conversion from English to arbitrary target languages.
 
-Having messages available in other languages can be an important bridge for R learners not confident in English --
-rather than learning two things at once (coding in R and processing diagnostic information in English), they can
-focus on coding while getting more natural errors/warnings in their native tongue.
+Having messages available in other languages can be an important bridge
+for R learners not confident in English -- rather than learning two
+things at once (coding in R and processing diagnostic information in
+English), they can focus on coding while getting more natural
+errors/warnings in their native tongue.
 
-The \href{https://www.gnu.org/software/gettext/manual/index.html}{\texttt{gettext} manual} is a more canonical reference for a
-deep understanding of how \texttt{gettext} works. This chapter will just give a broad overview, with particular focus on
-how things work for R, with the goal of making it as low-friction as possible for developers and users to contribute
+The \href{https://www.gnu.org/software/gettext/manual/index.html}{\texttt{gettext}
+manual} is a
+more canonical reference for a deep understanding of how \texttt{gettext}
+works. This chapter will just give a broad overview, with particular
+focus on how things work for R, with the goal of making it as
+low-friction as possible for developers and users to contribute
 new/updated translations.
 
 \hypertarget{how-translations-work}{%
 \section{How translations work}\label{how-translations-work}}
 
-Each of the default packages distributed with R (i.e., those found in \texttt{./src/library} such as \texttt{base}, \texttt{utils},
-and \texttt{stats} and which have priority base) contains a \texttt{po} directory. A \texttt{po} directory is the central location for
-ataloguing/translating each package's messages. It contains a template message file (\texttt{.pot}) for the corresponding
-ackage along with translated \texttt{.po} files (that are created using the template \texttt{.pot} file).
+Each of the default packages distributed with R (i.e., those found in
+\texttt{./src/library} such as \texttt{base}, \texttt{utils}, and \texttt{stats} and which have
+priority base) contains a \texttt{po} directory. A \texttt{po} directory is the
+central location for ataloguing/translating each package's messages. It
+contains a template message file (\texttt{.pot}) for the corresponding ackage
+along with translated \texttt{.po} files (that are created using the template
+\texttt{.pot} file).
 
 \hypertarget{pot-files}{%
 \subsection{\texorpdfstring{\texttt{.pot} files}{.pot files}}\label{pot-files}}
 
-A \texttt{.pot} file is a template file found inside the \texttt{po} directory of an R package.
-This template file is a snapshot of the messages available in a given \textbf{domain}. A domain in R typically identifies
-a source package and a source language (either R or C/C++). For example, the file \texttt{R-stats.pot}
-(found in the R sources in \texttt{./src/library/stats/po}) is a catalogue of all messages produced by R code in the
-\texttt{stats} package, while \texttt{stats.pot} is a catalogue of all messages produced by C code in the \texttt{stats} package.
+A \texttt{.pot} file is a template file found inside the \texttt{po} directory of an R
+package. This template file is a snapshot of the messages available in a
+given \textbf{domain}. A domain in R typically identifies a source package
+and a source language (either R or C/C++). For example, the file
+\texttt{R-stats.pot} (found in the R sources in \texttt{./src/library/stats/po}) is a
+catalogue of all messages produced by R code in the \texttt{stats} package,
+while \texttt{stats.pot} is a catalogue of all messages produced by C code in
+the \texttt{stats} package.
 
-The `base' package has two exceptions to the basic pattern described above. The first is the domain for messages produced by
-the C code which is the fundamental backing of R itself (especially, but not exclusively, the C code under
-./src/main{[}\^{}The file \texttt{./po/POTFILES} is the canonical source of files searched. Note that while, technically, it is possible
-to support translations in Fortran code, R does not currently do so. Only a handful of messages are produced by Fortran
-routines in the R sources.{]}). The associated \texttt{.pot} file is \texttt{R.pot} and is found in \texttt{./src/library/base/po}.
-R-base.pot\texttt{is\ a\ normal}.pot\texttt{file\ because\ base\ has\ a\ normal}R` directory.
+The `base' package has two exceptions to the basic pattern described
+above. The first is the domain for messages produced by the C code which
+is the fundamental backing of R itself (especially, but not exclusively,
+the C code under ./src/main{[}\^{}The file \texttt{./po/POTFILES} is the canonical
+source of files searched. Note that while, technically, it is possible
+to support translations in Fortran code, R does not currently do so.
+Only a handful of messages are produced by Fortran routines in the R
+sources.{]}). The associated \texttt{.pot} file is \texttt{R.pot} and is found in
+\texttt{./src/library/base/po}.
+R-base.pot\texttt{is\ a\ normal}.pot\texttt{file\ because\ base\ has\ a\ normal}R`
+directory.
 
-The second is the domain for the Windows R GUI, i.e., the text in the menus and elsewhere in the R GUI program
-available for running R on Windows. These messages are stored in the \texttt{RGui.pot} domain, also in the \texttt{po}
-directory for \texttt{base}, and are most commonly derived from C code found in \texttt{./src/gnuwin32}. One reason to keep
-this domain separate is that it is only relevant to one platform (Windows). In particular, Windows has historically
-different character encodings, so that it made more sense for Windows developers to produce translations specifically
-or Windows, since it is non-trivial for non-Windows users to test their translations for the Windows GUI.
+The second is the domain for the Windows R GUI, i.e., the text in the
+menus and elsewhere in the R GUI program available for running R on
+Windows. These messages are stored in the \texttt{RGui.pot} domain, also in the
+\texttt{po} directory for \texttt{base}, and are most commonly derived from C code
+found in \texttt{./src/gnuwin32}. One reason to keep this domain separate is
+that it is only relevant to one platform (Windows). In particular,
+Windows has historically different character encodings, so that it made
+more sense for Windows developers to produce translations specifically
+or Windows, since it is non-trivial for non-Windows users to test their
+translations for the Windows GUI.
 
 \hypertarget{generating-.pot-files}{%
 \subsubsection{\texorpdfstring{Generating \texttt{.pot} files}{Generating .pot files}}\label{generating-.pot-files}}
 
-For outside contributors, there's no need to update .pot files -- translators will typically take the R \texttt{.pot} files
-as given and generate \texttt{.po} files. These will be sent along to a language-specific translation maintainer, who then
-compiles them to send to the R Core developer responsible for translations, who finally applies them as a patch.
+For outside contributors, there's no need to update .pot files --
+translators will typically take the R \texttt{.pot} files as given and generate
+\texttt{.po} files. These will be sent along to a language-specific translation
+maintainer, who then compiles them to send to the R Core developer
+responsible for translations, who finally applies them as a patch.
 
-To emphasize, this section is almost always not needed for contributing translations -- it is here for
-completeness and edification.
+To emphasize, this section is almost always not needed for contributing
+translations -- it is here for completeness and edification.
 
 \hypertarget{po-files}{%
 \subsection{\texorpdfstring{\texttt{.po} files}{.po files}}\label{po-files}}
 
-.po files are the most important artifacts for translators. They provide the (human-readable!) mapping between
-the messages as they appear in the source code and how the messages will appear to users in translated locales.
+.po files are the most important artifacts for translators. They provide
+the (human-readable!) mapping between the messages as they appear in the
+source code and how the messages will appear to users in translated
+locales.
 
 \hypertarget{singular-messages}{%
 \subsubsection{Singular messages}\label{singular-messages}}
 
-Most messages appear as \texttt{msgid}/\texttt{msgstr} pairs. The former gives the message as it appears in the code, while the
-latter shows how it should appear in translation. For example, here is an error in German (locale: \texttt{de}) informing
-the user that their input must be of class \texttt{POSIXt}
+Most messages appear as \texttt{msgid}/\texttt{msgstr} pairs. The former gives the
+message as it appears in the code, while the latter shows how it should
+appear in translation. For example, here is an error in German (locale:
+\texttt{de}) informing the user that their input must be of class \texttt{POSIXt}
 
 \begin{verbatim}
 msgid "'to' must be a \"POSIXt\" object"
 msgstr "'to' muss ein \"POSIXt\" Objekt sein"
 \end{verbatim}
 
-See this in context in the \href{https://svn.r-project.org/R/trunk/src/library/base/po/R-de.po}{\texttt{R-de.po} source file}.
+See this in context in the \href{https://svn.r-project.org/R/trunk/src/library/base/po/R-de.po}{\texttt{R-de.po} source
+file}.
 
 The same message can also be found in
 \href{https://svn.r-project.org/R/trunk/src/library/base/po/R-it.po}{\texttt{R-it.po}}
@@ -1629,16 +1658,23 @@ msgstr "'to' dev'essere un oggetto \"POSIXt\""
 \hypertarget{plural-messages}{%
 \subsubsection{Plural messages}\label{plural-messages}}
 
-Some messages will have different translations depending on some input determined at run time (e.g., the \texttt{length()} of
-an input object or the \texttt{nrow()} of a \texttt{data.frame}). This presents a challenge for translation, because different languages
-have different rules for how to pluralize different ordinal
-numbers{[}\^{}See the \href{https://www.gnu.org/software/gettext/manual/html_node/Plural-forms.html}{relevant section} of the \texttt{gettext} manual{]}.
-For example, English typically adds \texttt{s} to any quantity of items besides 1 (1 dog, 2 dog\texttt{s}, 100 dog\texttt{s}, even 0 dog\texttt{s}).
-Chinese typically does not alter the word itself in similar situations (一只狗, 两只狗, 一百只狗, 零只狗); Arabic has \emph{six}
+Some messages will have different translations depending on some input
+determined at run time (e.g., the \texttt{length()} of an input object or the
+\texttt{nrow()} of a \texttt{data.frame}). This presents a challenge for translation,
+because different languages have different rules for how to pluralize
+different ordinal numbers{[}\^{}See the \href{https://www.gnu.org/software/gettext/manual/html_node/Plural-forms.html}{relevant
+section}
+of the \texttt{gettext} manual{]}. For example, English typically adds \texttt{s} to any
+quantity of items besides 1 (1 dog, 2 dog\texttt{s}, 100 dog\texttt{s}, even 0
+dog\texttt{s}). Chinese typically does not alter the word itself in similar
+situations (一只狗, 两只狗, 一百只狗, 零只狗); Arabic has \emph{six}
 different ways to pluralize a quantity.
 
-In \texttt{.po} files, this shows up in the form of \texttt{msgid\_plural} entries, followed by several ordered \texttt{msgstr} entries. Here's an example from
-\href{https://github.com/r-devel/r-svn/blob/c715d61cb74b3fee2d035faed9b258e86e420b75/src/library/base/po/R-de.po\#L2015-L2018}{\texttt{R-de.po}}\footnote{The GitHub mirror of the \href{https://svn.r-project.org/R/trunk/}{actual svn repo} is linked in this chapter as it is a better interface for browsing the source files.}:
+In \texttt{.po} files, this shows up in the form of \texttt{msgid\_plural} entries,
+followed by several ordered \texttt{msgstr} entries. Here's an example from
+\href{https://github.com/r-devel/r-svn/blob/c715d61cb74b3fee2d035faed9b258e86e420b75/src/library/base/po/R-de.po\#L2015-L2018}{\texttt{R-de.po}}\footnote{The GitHub mirror of the \href{https://svn.r-project.org/R/trunk/}{actual svn
+  repo} is linked in this chapter
+  as it is a better interface for browsing the source files.}:
 
 \begin{verbatim}
 msgid "Warning message:\n"
@@ -1647,8 +1683,10 @@ msgstr[0] "Warnmeldung:\n"
 msgstr[1] "Warnmeldungen:\n"
 \end{verbatim}
 
-The two entries in English correspond to the singular and plural messages; the two entries in German correspond similarly, because
-pluralization rules in German are similar to those in English. The situation in Lithuanian
+The two entries in English correspond to the singular and plural
+messages; the two entries in German correspond similarly, because
+pluralization rules in German are similar to those in English. The
+situation in Lithuanian
 (\href{https://github.com/r-devel/r-svn/blob/c715d61cb74b3fee2d035faed9b258e86e420b75/src/library/base/po/R-lt.po\#L1999-L2003}{\texttt{R-lt.po}})
 is more divergent:
 
@@ -1662,47 +1700,167 @@ msgstr[2] "Įspėjančių pranešimų:\n"
 
 This corresponds to the 3 different ways to pluralize words in Polish.
 
-What do \texttt{0}, \texttt{1}, and \texttt{2} correspond to, exactly? Ideally, this will be clear to native speakers of the language, but for
-clarity, it is the solution to a small arithmetic problem that can be found in the language's metadata entry. Look for the
-\texttt{Plural-Forms} entry in the metadata at the top of the \texttt{.po} file;
-\href{https://github.com/r-devel/r-svn/blob/c715d61cb74b3fee2d035faed9b258e86e420b75/src/library/base/po/R-lt.po\#L18-L19}{here it is for Lithuanian}:
+What do \texttt{0}, \texttt{1}, and \texttt{2} correspond to, exactly? Ideally, this will be
+clear to native speakers of the language, but for clarity, it is the
+solution to a small arithmetic problem that can be found in the
+language's metadata entry. Look for the \texttt{Plural-Forms} entry in the
+metadata at the top of the \texttt{.po} file; \href{https://github.com/r-devel/r-svn/blob/c715d61cb74b3fee2d035faed9b258e86e420b75/src/library/base/po/R-lt.po\#L18-L19}{here it is for
+Lithuanian}:
 
 \begin{verbatim}
 "Plural-Forms: nplurals=3; plural=(n%10==1 && n%100!=11 ? 0 : n%10>=2 && (n"
 "%100<10 || n%100>=20) ? 1 : 2);\n"
 \end{verbatim}
 
-\texttt{nplurals} tells us how many entries correspond to each \texttt{msgid\_plural} for this language. \texttt{plural} tells us, for the
-quantity \texttt{n}, which entry to use. The arithmetic is C code; most important if you really want to parse this and are only
-familiar with R code is C's \href{https://en.wikipedia.org/wiki/\%3F:}{ternary operator}: \texttt{test\ ?\ valueIfTrue\ :\ valueIfFalse}
-is a handy way to write R's \texttt{if\ (test)\ valueIfTrue\ else\ valueIfFalse}.
+\texttt{nplurals} tells us how many entries correspond to each \texttt{msgid\_plural}
+for this language. \texttt{plural} tells us, for the quantity \texttt{n}, which entry
+to use. The arithmetic is C code; most important if you really want to
+parse this and are only familiar with R code is C's \href{https://en.wikipedia.org/wiki/\%3F:}{ternary
+operator}:
+\texttt{test\ ?\ valueIfTrue\ :\ valueIfFalse} is a handy way to write R's
+\texttt{if\ (test)\ valueIfTrue\ else\ valueIfFalse}.
 
 Parsing, we get the following associations:
 
 \begin{itemize}
 \tightlist
 \item
-  the \texttt{0} entry corresponds to when a number equals 1 modulo 10 (i.e., 1, 11, 21, 31, \ldots) \emph{except} numbers equaling
-  11 modulo 100 (i.e., 11, 111, 211, 311, \ldots). Combining, that's 1, 21, 31, \ldots, 91, 101, 121, 131, \ldots, 191, \ldots{}
+  the \texttt{0} entry corresponds to when a number equals 1 modulo 10 (i.e.,
+  1, 11, 21, 31, \ldots) \emph{except} numbers equaling 11 modulo 100 (i.e.,
+  11, 111, 211, 311, \ldots). Combining, that's 1, 21, 31, \ldots, 91, 101,
+  121, 131, \ldots, 191, \ldots{}
 \item
-  the \texttt{1} entry corresponds to numbers at least 2 modulo 10 (2, 3, \ldots, 8, 9, 12, 13, 14, \ldots) and \emph{either}
-  below 10 modulo 100 (0, 1, \ldots, 9, 100, 101, \ldots, 109, \ldots) \emph{or} exceeding 20 modulo 100 (21, 22, \ldots, 99). Combining,
-  that's 2, 3, \ldots, 9, 22, 23, \ldots, 29, 32, 33, \ldots{} 39, \ldots, 102, 103, \ldots, 109, 122, 123, \ldots{}
+  the \texttt{1} entry corresponds to numbers at least 2 modulo 10 (2, 3,
+  \ldots, 8, 9, 12, 13, 14, \ldots) and \emph{either} below 10 modulo 100 (0, 1,
+  \ldots, 9, 100, 101, \ldots, 109, \ldots) \emph{or} exceeding 20 modulo 100 (21,
+  22, \ldots, 99). Combining, that's 2, 3, \ldots, 9, 22, 23, \ldots, 29, 32,
+  33, \ldots{} 39, \ldots, 102, 103, \ldots, 109, 122, 123, \ldots{}
 \item
-  The \texttt{2} entry corresponds to all other numbers, i.e.~0, 10, 11, 12, \ldots, 19, 20, 30, \ldots, 90, 100, 110, 111, 112, \ldots{}
+  The \texttt{2} entry corresponds to all other numbers, i.e.~0, 10, 11, 12,
+  \ldots, 19, 20, 30, \ldots, 90, 100, 110, 111, 112, \ldots{}
 \end{itemize}
 
 \hypertarget{mo-files}{%
 \subsection{\texorpdfstring{\texttt{.mo} files}{.mo files}}\label{mo-files}}
 
-\texttt{.po} files are plain text, but while helpful for human readers, this is inefficient for consumption by computers.
-The .mo format is a ``compiled'' version of the .po file optimized for retrieving messages when R is running.
+\texttt{.po} files are plain text, but while helpful for human readers, this is
+inefficient for consumption by computers. The .mo format is a ``compiled''
+version of the .po file optimized for retrieving messages when R is
+running.
 
-In R-devel, the conversion from .po to .mo is done by R Core -- you don't need to compile these files yourself.
-They are stored in the R sources at \texttt{./src/library/translations/inst} in various language-specific subdirectories.
+In R-devel, the conversion from .po to .mo is done by R Core -- you
+don't need to compile these files yourself. They are stored in the R
+sources at \texttt{./src/library/translations/inst} in various
+language-specific subdirectories.
 
 \hypertarget{how-to-contribute-new-translations}{%
 \section{How to contribute new translations}\label{how-to-contribute-new-translations}}
+
+Translating R into different languages helps make it more user-friendly
+for non-English speakers and helps to grow the R community. See the blog
+post on how \href{https://blog.r-project.org/2022/07/25/r-can-use-your-help-translating-r-messages}{R can use your help: Translating R
+messages}.
+
+To get started contributing to translations, please follow the steps
+below:
+
+\textbf{Step 1: Register an Account at Weblate}
+
+Weblate is an open-source platform for collaborative translation of
+software projects. Register an account on R's Weblate server,
+\url{https://translate.rx.studio/}, to start contributing.
+
+\begin{quote}
+\emph{Note: To get started follow the detailed workflow and convention for
+translation which is given here:
+\url{https://github.com/r-devel/translations/wiki/Conventions-for-translations}}
+\end{quote}
+
+\textbf{Step 2: Choose a Component and Language}
+
+Select a component of R with less than 100\% translation. Each component
+corresponds to the messages in either the R code or the C code of one of
+the packages in base R, e.g.~base (R files), or tools (C files). There
+is one special case: base (R GUI), which corresponds to the messages in
+the Windows Graphical User Interface.
+
+After selecting a component, you can select your preferred language.
+
+\includegraphics{img/translate_component.png}
+
+\textbf{Step 3: Translate the Message}
+
+Now, you can click on Translate button on your right.
+
+\begin{quote}
+Note: More information for String status visit:
+\url{https://docs.weblate.org/en/latest/workflows.html\#translation-states}
+\end{quote}
+
+\includegraphics{img/translate_button.png}
+
+Then, start translating the message by typing the translation in the
+text box.
+
+\includegraphics{img/translate_string_and_save.png}
+
+\begin{itemize}
+\item
+  If you are \textbf{confident} that the \textbf{translation is correct}, make
+  sure the ``Needs editing'' box is \textbf{unchecked}.
+\item
+  If you are \textbf{unsure} about how to translate, write the translation
+  as a \textbf{Suggest} button instead.
+\item
+  Finally, Click \textbf{``Save and Continue''} to save the translation and
+  continue.
+\end{itemize}
+
+\begin{center}\rule{0.5\linewidth}{0.5pt}\end{center}
+
+\begin{quote}
+\textbf{Note:} Use Glossary feature within Weblate making translation easy
+and consistent:
+\url{https://translate.rx.studio/projects/r-project/glossary/}
+\end{quote}
+
+\begin{quote}
+\textbf{Note:} Make sure to use Automatic Suggestions as a starting point.
+\end{quote}
+
+\begin{enumerate}
+\def\labelenumi{\arabic{enumi}.}
+\item
+  Click on Automatic Suggestions (machine translation)
+\item
+  Accept it if you think the automatic suggestion looks good
+\end{enumerate}
+
+\includegraphics{img/auto-suggestion.png}
+
+\begin{center}\rule{0.5\linewidth}{0.5pt}\end{center}
+
+\textbf{Some Tips to follow:}
+
+\begin{itemize}
+\item
+  \textbf{Be consistent:} Use the same words and phrases throughout the
+  translation to make it consistent and avoid confusion.
+\item
+  \textbf{Check for technical issues:} After finishing the translation,
+  check if you have any alerts or warning in the Weblate string
+  status, e.g.~double instead of single space.
+\item
+  \textbf{Follow language specific guidelines:} Check how other languages
+  have translated the string. Even if you are not fluent in another
+  language it can give you an idea of how other translators have
+  handled it, especially which parts are left verbatim. A detailed
+  guide is given here :
+  \href{https://github.com/r-devel/translations/wiki/Conventions-for-translations\#languages-and-contributions}{Conventions-for-translations\#languages-and-contributions}
+\end{itemize}
+
+Related links:
+\url{https://contributor.r-project.org/translating-r-to-your-language/}
 
 \hypertarget{current-status-of-translations-in-r}{%
 \section{Current status of translations in R}\label{current-status-of-translations-in-r}}
