Update links after moving translation wiki to a web

--- a/rdevguide.tex
+++ b/rdevguide.tex
@@ -1790,7 +1790,7 @@ Related links:
 \hypertarget{current-status-of-translations-in-r}{%
 \section{Current status of translations in R}\label{current-status-of-translations-in-r}}
 
-\url{https://contributor.r-project.org/translations/}
+\url{https://contributor.r-project.org/translations-dashboard/}
 
 \hypertarget{helpful-references}{%
 \section{Helpful references}\label{helpful-references}}
