willingc published a site update

--- a/rdevguide.tex
+++ b/rdevguide.tex
@@ -117,7 +117,7 @@
 
 \title{R Development Guide}
 \author{R Contribution Working Group}
-\date{2023-09-14}
+\date{2023-09-30}
 
 \begin{document}
 \maketitle
@@ -1772,7 +1772,7 @@ software projects. Register an account on R's Weblate server,
 \begin{quote}
 \emph{Note: To get started follow the detailed workflow and convention for
 translation which is given here:
-\url{https://github.com/r-devel/translations/wiki/Conventions-for-translations}}
+\url{https://contributor.r-project.org/translations/}}
 \end{quote}
 
 \textbf{Step 2: Choose a Component and Language}
@@ -1855,7 +1855,7 @@ and consistent:
   language it can give you an idea of how other translators have
   handled it, especially which parts are left verbatim. A detailed
   guide is given here :
-  \href{https://github.com/r-devel/translations/wiki/Conventions-for-translations\#languages-and-contributions}{Conventions-for-translations\#languages-and-contributions}
+  \href{https://contributor.r-project.org/translations/Conventions_for_Languages/\#languages-and-contributions}{Conventions-for-translations\#languages-and-contributions}
 \end{itemize}
 
 Related links:
@@ -1864,7 +1864,7 @@ Related links:
 \hypertarget{current-status-of-translations-in-r}{%
 \section{Current status of translations in R}\label{current-status-of-translations-in-r}}
 
-\url{https://contributor.r-project.org/translations/}
+\url{https://contributor.r-project.org/translations-dashboard/}
 
 \hypertarget{helpful-references}{%
 \section{Helpful references}\label{helpful-references}}
