--- a/08-documenting.Rmd
+++ b/08-documenting.Rmd
@@ -8,7 +8,49 @@ This chapter is about the ways people can contribute to R's documentation, with 
 
 ## Introduction to `.Rd` files
 
-The R help files are written in “R documentation” (Rd) format, a markup language which resembles LaTeX. The `.Rd` file format can be further processed into a variety of formats, including LaTeX, HTML, and plain text. The `.Rd` files can be found in the `man` directory of the source code for the corresponding package. For example, the help file for `base::mean()` is found at <https://svn.r-project.org/R/trunk/src/library/base/man/mean.Rd>. The file`mean.Rd` has the content shown below:
+The R help files are written in “R documentation” (Rd) format, a markup language which resembles LaTeX. The `.Rd` file format can be further processed into a variety of formats, including LaTeX, HTML, and plain text. The `.Rd` files can be found in the `man` directory of the source code for the corresponding package. 
+
+There are three main parts of an `.Rd` file:
+
+1. **Header**: This part is for the basic information of the document/file. For instance, the name of the file, the topics documented, a title, a short textual description, and R usage information for the objects documented.
+
+2. **Body**: This part includes further information on the function's arguments and return value.
+
+3. **Footer**: This part is optional. Usually the keyword information is included here.
+
+All the above information is included in a `.Rd` file within a series of sections with standard names (user-defined sections are also allowed). These sections are discussed below:
+
+1. `\title` section:
+    * Capitalize each word.
+    * Do not end in a period.
+    * Avoid use of markup language (because markup language need not be suitable for various hypertext search systems).
+    
+2. `\usage` and `\examples` sections:
+    * Line length of 65 characters is advised.
+    * Use `TRUE` instead of `T` and `FALSE` instead of `F`.
+    * Add spaces around binary operators.
+    * Add spaces after commas in the argument lists.
+    * Use `<-` rather than `=` for assignments.
+    * Add spaces around the `<-` operator.
+    * Do not use tabs to indent (as these do not render correctly on all possible pagers).
+    * Use 4 spaces to indent the (example) code.
+    * Make sure the examples are directly executable.
+    * The examples should be system-independent.
+    * The examples should not require special facilities (for instance, Internet access or write permission to specific directories).
+    * Examples should also not take longer than necessary to run, as they are run when checking a build of R.
+    
+3. `\source` and `\references` sections:
+    * Author(s) names should be written in the form `Author, A. B.`.
+    * Author(s) names should be separated by a comma or `and` (but not both).
+    * Separate paragraphs (separated by a blank line) should be used for each reference.
+    * Give a date immediately after the author(s) names.
+    * Do not put a period after the date.
+    * Titles of books and journals (not articles) should be enclosed in `\emph{...}`.
+    * Volume numbers for journals are to be enclosed in `\bold{...}` and followed by a comma.
+    * Use `--` for page ranges.
+    * For giving an address for a publisher use the format `New York: Springer-Verlag`.
+
+For example, the help file for `base::mean()` is found at <https://svn.r-project.org/R/trunk/src/library/base/man/mean.Rd>. The file`mean.Rd` has the content shown below:
 
 ```
 % File src/library/base/man/mean.Rd
@@ -74,46 +116,6 @@ Many R package developers write help files using the R package [roxygen2](https:
 ## Guidelines for writing R help files
 
 This section is based on the [guidelines used by R Core developers for writing R help files](https://developer.r-project.org/Rds.html). Extensive details of writing R documentation files can be found in the [Writing R Extensions](https://cran.r-project.org/doc/manuals/r-release/R-exts.html#Writing-R-documentation-files) manual.
-
-There are three main parts of an `.Rd` file:
-
-1. **Header**: This part is for the basic information of the document/file. For instance, the name of the file, the topics documented, a title, a short textual description, and R usage information for the objects documented.
-
-2. **Body**: This part includes further information on the function's arguments and return value.
-
-3. **Footer**: This part is optional. Usually the keyword information is included here.
-
-All the above information is included in a `.Rd` file within a series of sections with standard names (user-defined sections are also allowed). These sections are discussed below:
-
-1. `\title` section:
-    * Capitalize each word.
-    * Do not end in a period.
-    * Avoid use of markup language (because markup language need not be suitable for various hypertext search systems).
-    
-2. `\usage` and `\examples` sections:
-    * Line length of 65 characters is advised.
-    * Use `TRUE` instead of `T` and `FALSE` instead of `F`.
-    * Add spaces around binary operators.
-    * Add spaces after commas in the argument lists.
-    * Use `<-` rather than `=` for assignments.
-    * Add spaces around the `<-` operator.
-    * Do not use tabs to indent (as these do not render correctly on all possible pagers).
-    * Use 4 spaces to indent the (example) code.
-    * Make sure the examples are directly executable.
-    * The examples should be system-independent.
-    * The examples should not require special facilities (for instance, Internet access or write permission to specific directories).
-    * Examples should also not take longer than necessary to run, as they are run when checking a build of R.
-    
-3. `\source` and `\references` sections:
-    * Author(s) names should be written in the form `Author, A. B.`.
-    * Author(s) names should be separated by a comma or `and` (but not both).
-    * Separate paragraphs (separated by a blank line) should be used for each reference.
-    * Give a date immediately after the author(s) names.
-    * Do not put a period after the date.
-    * Titles of books and journals (not articles) should be enclosed in `\emph{...}`.
-    * Volume numbers for journals are to be enclosed in `\bold{...}` and followed by a comma.
-    * Use `--` for page ranges.
-    * For giving an address for a publisher use the format `New York: Springer-Verlag`.
 
 The language used in the documentations should follow these basic rules:
 
