hturner published a site update

--- a/rdevguide.tex
+++ b/rdevguide.tex
@@ -117,7 +117,7 @@
 
 \title{R Development Guide}
 \author{R Contribution Working Group}
-\date{2023-11-06}
+\date{2024-02-19}
 
 \begin{document}
 \maketitle
@@ -1087,7 +1087,7 @@ Then you should check that R still works as expected via:
 
 If there is no test for your proposed change you can add a new regression test, following \protect\hyperlink{TestR}{the guidelines}.
 
-Then you should bring changes from the repository into the working copy, in case any other change has been introduced, and create a path.diff file with just the changes you want to propose to the R core:
+Then you should bring changes from the repository into the working copy, in case any other change has been introduced, and create a patch.diff file with just the changes you want to propose to the R core:
 
 \begin{Shaded}
 \begin{Highlighting}[]
@@ -1095,6 +1095,8 @@ Then you should bring changes from the repository into the working copy, in case
 \FunctionTok{svn}\NormalTok{ diff }\OperatorTok{\textgreater{}}\NormalTok{ patch.diff}
 \end{Highlighting}
 \end{Shaded}
+
+Most often, changes are made to existing files, but if you happen to be adding a new file in your change, you'll need to run \texttt{svn\ add\ path/to/file1\ ...} before running \texttt{svn\ diff} to mark those files for inclusion.
 
 This \texttt{patch.diff} file is the one that can be proposed to the R core via \protect\hyperlink{SubmitPatches}{Bugzilla}. You can also \protect\hyperlink{PatchesReview}{ask for reviews} to the patch before proposing it to the R core via the \href{https://stat.ethz.ch/mailman/listinfo/r-devel}{r-devel mailing list} or the slack channel of the R-contributors space.
 
